# pylith

./: .atom-build.js  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .jsbeautifyrc  .readthedocs.yaml  .travis.yml  .zenodo.json  AUTHORS  Benchmarks  CHANGES  CHANGES.md  CITATION.cff  CLAUDE.md  COPYING  ChangeLog  DEPENDENCIES  INSTALL  LICENSE.md  Make.mm  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README_multiphysics  TODO  Test.py  aclocal.m4  azure-pipelines.yml  check.am  config.h.in  config.status  configure  configure.ac  libtool  merge.sh  portinfo  (+7 more)
applications/: Makefile.am  powerlaw_gendb  pylith  pylith.in  pylith.py  pylith_cfgsearch  pylith_convertmesh  pylith_dumpparameters  pylith_eqinfo  pylith_genxdmf  pylith_powerlaw_gendb  pylith_prepmesh.in  pylith_runner  pylith_viz  pylithic.py  pylithic.py.in
applications/utilities/: Makefile.am  powerlaw_gendb.py  pylith_eqinfo.in  pylith_genxdmf  pylith_genxdmf.in  pylith_vtktohdf5  pylithinfo  pylithinfo.in
developer/: Makefile  Makefile.am  check_tarball.py  downloads.py  format_pydocs.py  format_source.py  headers.txt  pdf_to_svg.py  tarball_exclude.txt  uncrustify.cfg  update_copyright.sh  upload_release_asset.py
doc/: Makefile.am  PyLith.vpp  makefile  manual.xml  memoryUsage.tex  pylith_book.xml  tutorialbm5.xml
doc/developer/: Makefile.am  SWIG  Sieve  Sieve.tex  build.md  debugging  downloads.py  general  howto_mergefromstable.txt  make_petscdist.sh  materials  swig.txt  toplevel_flow.txt  uncrustify.cfg  update_1.8to2.0.sh  update_1.9to2.0.sh  update_copyright.sh  update_darwinlinking.py  updatecopyright.sh
doc/install/: Cluster_CIT-garuda.txt  Cluster_CIT-pangu.txt  Cluster_Rocks-4.3-AMD64.txt  Cluster_Rocks-4.3-AMD64_bash.sh  Cluster_Rocks-4.3-Intel64.txt  Cluster_Rocks-4.3.txt  Linux_Fedora8-AMD64.txt  Linux_Fedora8-AMD64_Aagaard.txt  Linux_Fedora8-AMD64_Aagaard_bash.sh  Linux_ubuntu-AMD64_Aagaard.sh  Linux_ubuntu-AMD64_Aagaard.txt  MacBookPro_Aagaard.txt  MacBookPro_Aagaard_Fink.txt  MacBookPro_Aagaard_Fink_bash.sh  MacBookPro_Aagaard_MacPorts.txt  MacBookPro_Aagaard_MacPorts_bash.sh  MacBookPro_Aagaard_bash.sh  Makefile.am  PowerbookPro_Aagaard.txt  README
doc/presentations/: Makefile.am
doc/refguide/: Doxyfile  Makefile.am  doxyconfig
doc/releasenotes/: Makefile.am  announce-v1.5.2.txt  announce_v1.0.1.txt  announce_v1.1.0.txt  announce_v1.2.0.txt  announce_v1.3.0.txt  announce_v1.3.1.txt  announce_v1.4.0.txt  announce_v1.4.2.txt  announce_v1.5.0.txt  announce_v1.5.1.txt  announce_v1.5.2.txt  announce_v1.6.0.txt  announce_v1.6.1.txt  announce_v1.6.2.txt  announce_v1.6.3.txt  announce_v1.7.0.txt  announce_v1.7.1.txt  announce_v1.8.0.txt  announce_v1.8.1.txt  announce_v1.9.0.txt  announce_v2.0.0.txt  announce_v2.0.1.txt  announce_v2.0.3.txt  announce_v2.1.0.txt  announce_v2.2.0.txt  announce_v2.2.1.txt  announce_v2.2.2.txt  checklist.txt
doc/tutorials/: tutorialbm5.xml
doc/uml/: PyLith.vpp
doc/userguide/: Makefile.am  TODO  appendices.xml  components.lyx  components.tex  coveronly.tex  developer.tex  docdefs.tex  example.sed  glossary.lyx  glossary.tex  governingeqns.lyx  input.sed  license.lyx  license.tex  license.xml  makefile  makepdf.sh  preface.lyx  preface.tex  preface.xml  pylith.xml  pylith_userguide.xml  pylithdoc.cls  qstatic-smalldef.lyx  references.bib  references.tex  styleguide.tex  userguide.lyx  userguide.tex
docs/: Makefile  Makefile.am  conf.py  index.md  references.bib  requirements.txt
docs-sphinx/: Makefile.am  build.sh  conf.py  index.md  quickref.md  references.bib  requirements.txt
docs-sphinx/developer/: index.md
docs-sphinx/intro/: architecture.md  development-plan.md  index.md  quickstart.md  release-notes.md
docs-sphinx/palettes/: figcolors.tex
docs-sphinx/user/: index.md  preface.md
docs/_templates/: sidebar-cig.html
docs/developer/: index.md
docs/intro/: conventions.md  development-plan.md  index.md  preface.md  quickstart.md
docs/markup/: README.md  __init__.py  pyproject.toml  pyrejournal_lexer.py  pyrejournal_style.py
docs/tikz-styles/: example-style.tex
docs/user/: index.md
examples/: Makefile  Makefile.am  README  README.md  cleanoutput.sh  run_examples.py  run_examples.sh
examples/2d/: Makefile.am
examples/3d/: Makefile.am
examples/Ridgecrest-2D/: Lon_Lat.txt  README.md  bc_2d_ridgecrest.jou  generate_gmsh.py  mesh_2d.jou  pylithapp.cfg  step01_slip.cfg  xy_2.txt
examples/Ridgecrest-2D-cubit/: 2D_Ridgecrest_mesh_tri.exo  2D_ridgecrest.jou  2d_ridgecrest.jou  mesh_2d.jou  pylithapp.cfg  step01_slip_cubit.cfg  xy.txt
examples/Ridgecrest-3D-cubit/: 3D_Ridgecrest_mesh_tri.exo  README.md  bc_ridgecrest.jou  geometry_Ridgcrest.jou  gradient_ridgecrest.jou  mesh_tri_3D_Ridgecrest.jou  points.jou  pylithapp.cfg  step01_slip_cubit.cfg
libsrc/: Makefile  Makefile.am
lithomop3d/: Make.mm  Makefile.am  README.force  TODO
modulesrc/: Makefile  Makefile.am  module.am
pylith/: Makefile  Makefile.am  PyLithApp.py  __init__.py
pylith3d/: Make.mm  Makefile.am  Makefile.in  README.elemfamily  TODO  pylith3dapp.py.in  pylithomop3d.cc  pypylith3d.cc
release-notes/: Makefile  Makefile.am  announce_v1.0.1.txt  announce_v1.0.2.txt  announce_v1.2.0.txt  announce_v1.4.0.txt  announce_v1.4.2.txt  announce_v1.5.0.txt  announce_v1.5.1.txt  announce_v1.8.0.txt  announce_v1.9.0.txt  announce_v2.0.0.txt  announce_v2.0.1.txt  announce_v2.0.3.txt  announce_v2.1.2.txt  announce_v2.1.3.txt  announce_v2.1.4.txt  announce_v2.2.0.txt  announce_v2.2.1.txt  announce_v3.0.0.txt  announce_v3.0.1.txt  announce_v3.0.2.md  announce_v3.0.3.md  announce_v3.0.3.txt  announce_v4.0.0.md  announce_v4.1.0.md  announce_v4.1.1.md  announce_v4.1.2.md  announce_v4.1.3.md  announce_v4.2.0.md  announce_v4.2.1.md  announce_v5.0.0.md  announce_v5.0.1.md  checklist.txt
share/: Makefile  Makefile.am  debug_malloc.cfg  generateetags.py  uncrustify.cfg  valgrind-python.supp
templates/: Makefile  Makefile.am  README
tests/: Makefile  Makefile.am  README  check_catch2.am  check_cppunit.am  data.am
unittests/: Makefile.am
(+14370 files in other folders)
