[egg_info]
tag_build =
tag_date = 0

[metadata]
name = pylith
version = 3.0.0
author = Brad Aagaard, Matthew Knepley, Charles Williams
author_email = baagaard@usgs.gov, knepley@buffalo.edu, c.williams@gns.cri.nz
description = :TODO:
license = MIT
url = http://www.geodynamics.org/cig/software/pylith

[options]
python_requires = >=3.6

packages = find:

scripts =
	applications/pylith
	applications/pylith_dumpparameters
	applications/pylith_eqinfo
	applications/pylith_genxdmf
	applications/pylith_cfgsearch
	applications/pylith_runner
	applications/powerlaw_gendb

#include_package_data = True
zip_safe = False

#[options.package_data]

[options.packages.find]
exclude =
	developer
	doc
	docker
	examples
	libsrc
	m4
	modulesrc
	playpen
	share
	templates
	tests
