[egg_info]
tag_build =
tag_date = 0

[metadata]
name = pylith
version = 4.1.2
author = Brad Aagaard, Matthew Knepley, Charles Williams
author_email = baagaard@usgs.gov, knepley@buffalo.edu, c.williams@gns.cri.nz
description = Finite-element software for modeling crustal deformation with an emphasis on earthquake faulting.
license = MIT
url = https://geodynamics.org/resources/pylith

[options]
python_requires = >=3.8

packages = find:

scripts =
	applications/pylith
	applications/pylith_dumpparameters
	applications/pylith_eqinfo
	applications/pylith_genxdmf
	applications/pylith_cfgsearch
	applications/pylith_runner
	applications/pylith_viz
	applications/pylith_powerlaw_gendb

#include_package_data = True
zip_safe = False

#[options.package_data]

[options.packages.find]
exclude =
	developer
	docs
	docker
	examples
	libsrc
	m4
	modulesrc
	playpen
	share
	templates
	tests
